Added calendar as custom directive

--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "angular-moment": "^0.10.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "moment": "^2.10.6",
     "sqlite3": "^3.1.1"
   }
 }
