--- a/bower.json
+++ b/bower.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "angular": "^1.4.0",
     "bootstrap-sass-official": "^3.2.0",
+    "angular-moment": "^2.5.0",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-momentjs": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
