--- a/bower.json
+++ b/bower.json
@@ -4,14 +4,16 @@
   "dependencies": {
     "angular": "^1.4.0",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-moment": "^2.5.0",
+    "angular-moment": "^0.10.2",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-momentjs": "~0.2.2"
+    "angular-momentjs": "~0.2.2",
+    "font-awesome": "fontawesome#~4.5.0",
+    "less": "~2.5.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
