--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "less": "~2.5.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "chai": "~3.4.2",
+    "mocha": "~2.3.4"
   },
   "appPath": "app",
   "moduleName": "angularCordovaApp",
