--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "angular-cordova",
   "version": "0.0.0",
   "dependencies": {
+    "jquery-ui": "~1.11.4",
     "angular": "^1.4.0",
     "bootstrap-sass-official": "^3.2.0",
     "angular-moment": "^0.10.2",
@@ -14,6 +15,7 @@
     "angular-momentjs": "~0.2.2",
     "font-awesome": "fontawesome#~4.5.0",
     "less": "~2.5.3"
+
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
